--- a/styles.css
+++ b/styles.css
@@ -99,12 +99,31 @@ header {
     font-weight: bold;
     text-align: end;
 }
-/*
-.container {
+
+.sectionfour{
+    background-color: #3882f6;
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-} */
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 100px;
+    margin: 60px 350px;
+    border-radius: 5px;
+}
+
+.sectionfour p{
+    color: #F9FAF8;
+    padding: 0;
+    margin: 0;
+}
+
+.sectionfour h3{
+    margin: 0;
+}
+
+.sectionfour button {
+    border: solid 2px;
+    padding: 5px 30px; 
+}
 
 footer {
    display: flex;
